fix small error in pyspark SQL quickstart_df.ipynb
quickstart_df.ipynb had a small error in which it said
`Column<b'a'>` instead of just `Column<'a'>`.
I assume this was simply an old version or something,
because when I run it now, it says `Column<'a'>`.

--- a/python/docs/source/getting_started/quickstart_df.ipynb
+++ b/python/docs/source/getting_started/quickstart_df.ipynb
@@ -513,7 +513,7 @@
     {
      "data": {
       "text/plain": [
-       "Column<b'a'>"
+       "Column<'a'>"
       ]
      },
      "execution_count": 16,
